<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/AccFileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/categoryFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/category_recordfile"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textFileStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/text_file_default"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AccFileLayout"
        android:layout_marginTop="0dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_record" />

    </LinearLayout>

</RelativeLayout>
